# poseliftert

./: .gitignore  CMakeLists.txt
include/poseliftert/: config.hpp  poseliftert.hpp
include/poseliftert/input/: from_body25.hpp  input.hpp  normalization.hpp
include/poseliftert/output/: output.hpp
python/: conv_module.py  pose_lifter.py  tcn.py  temporal_regression_head.py  to_torchscript.py
sample/: cli.cpp
src/: poseliftert.cpp
src/input/: from_body25.cpp  input.cpp  normalization.cpp
src/output/: output.cpp
